<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>service_msgs</name>
  <version>1.3.1</version>
  <description>Messages definitions common among all ROS services</description>

  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>

  <license>Apache License 2.0</license>

  <author email="brian.chen@openrobotics.org">Brian Chen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_core_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>unique_identifier_msgs</depend>

  <exec_depend>rosidl_core_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
