<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>type_description_interfaces_static</name>
  <version>1.3.1</version>
  <description>Static instantiation of the type_description_interfaces package.</description>

  <maintainer email="william@openrobotics.org">William Woodall</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_runtime_c</depend>
  <depend>rosidl_runtime_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
