<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>type_description_interfaces_utils</name>
  <version>0.0.1</version>
  <description>Utilities for manipulating type_description_interfaces C message structs.</description>
  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>

  <license>Apache License 2.0</license>
  <author email="brandon@openrobotics.org">Brandon Ong</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rcutils</build_depend>
  <build_depend>type_description_interfaces</build_depend>

  <test_depend>rcutils</test_depend>
  <test_depend>type_description_interfaces</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
